kubernetes/argo-cd/applications/production-hm/trino/kubernetes-manifests/hm-trino-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-trino-ingress
  namespace: production-hm-trino
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/routing/providers/kubernetes-ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: trino.hongbomiao.com
    # https://argo-cd.readthedocs.io/en/stable/user-guide/resource_hooks
    argocd.argoproj.io/hook: PostSync
  labels:
    app.kubernetes.io/name: hm-trino-ingress
    app.kubernetes.io/part-of: production-hm-trino
spec:
  rules:
    - host: trino.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-trino-trino
                port:
                  number: 8080
  tls:
    - hosts:
        - trino.hongbomiao.com
      secretName: production-hm-trino-certificate
